# R-Type

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  EntityManager_8cpp.html  EntityManager_8cpp__incl.md5  Entity_8cpp.html  Entity_8cpp__incl.map  Entity_8cpp__incl.md5  HitboxComponent_8cpp.html  HitboxComponent_8cpp__incl.md5  HitboxSystem_8cpp.html  PositionComponent_8cpp.html  README.md  RType_8cpp.html  _a_system_8hpp.html  _a_system_8hpp.js  _a_system_8hpp_source.html  _animation_component_8cpp.html  _animation_component_8hpp.html  _animation_component_8hpp.js  _animation_component_8hpp_source.html  _animation_system_8cpp.html  _animation_system_8hpp.html  _animation_system_8hpp.js  _animation_system_8hpp_source.html  _asteroid_8cpp.html  _behavior_component_8cpp.html  _behavior_component_8hpp.html  _behavior_component_8hpp_source.html  _behavior_component__t_8cpp.html  _behavior_component__t_8cpp.js  _behavior_system_8cpp.html  _behavior_system_8hpp.html  _behavior_system_8hpp.js  _behavior_system_8hpp_source.html  _behavior_system__t_8cpp.html  _behavior_system__t_8cpp.js  _bit_size_8hpp.html  _bit_size_8hpp.js  (+681 more)
.github/workflows/: build.yml  build_linux.yml  build_windows.yml  ci.yml  cmake.yml  discord.yml  discordLogs.yml  doxygen.yml  misc.yml  windows.yml
Error/: CMakeLists.txt  Error.cpp  Error.hpp
NetworkLib/: CMakeLists.txt
NetworkLib/include/: HostHandler.hpp  ISocket.hpp  LinuxSocket.hpp  LinuxSocketSelector.hpp  SocketFactory.hpp  SocketSelector.hpp  SocketSelectorFactory.hpp  WindowsSocket.hpp  WindowsSocketSelector.hpp
NetworkLib/src/: HostHandler.cpp  LinuxSocket.cpp  LinuxSocketSelector.cpp  SocketFactory.cpp  SocketSelectorFactory.cpp  WindowsSocket.cpp  WindowsSocketSelector.cpp
assets/jsons/: pattern_enemy_group.json
docs/: ClientProtocol.md  Contributor.md  CustomLevel.md  CustomiseLevels.md  ECS.drawio  ECS.md  ServerProtocol.md
html/: EntityManager_8cpp.html  EntityManager_8cpp__incl.map  HitboxSystem_8cpp__incl.map  HitboxSystem_8cpp__incl.md5  PositionComponent_8cpp.html  PositionComponent_8cpp__incl.map  PositionComponent_8cpp__incl.md5  RType_8cpp__incl.map  RType_8cpp__incl.md5  dir_b0ccf9fd37b047266b8dc6b1d4d4ce05_dep.md5  dir_b1a122bf62c958266ec5bf64d14fde5a.html  dir_b1a122bf62c958266ec5bf64d14fde5a_dep.map  dir_b3425cf3684a72a972685eae55fae74b.html  dir_b3425cf3684a72a972685eae55fae74b_dep.map  dir_eba7f6b8b7d3fd8e024a882aba073963_dep.map  dir_eba7f6b8b7d3fd8e024a882aba073963_dep.md5  files.html  globals.html  globals_func.html  index.html
html/search/: all_3.js  all_4.js  files_0.js  searchdata.js
include/: Lib.hpp  RType.hpp
include/Client/: Client.hpp  Game.hpp  Menu.hpp  UdpClient.hpp
include/Json/: JsonTools.hpp
include/Lib/: Buffer.hpp  Lib.hpp  Music.hpp  Sound.hpp  SoundManager.hpp  Sprite.hpp  Text.hpp  Timer.hpp  Udp_client.hpp  Window.hpp
include/Network/: Client.hpp  FdSet.hpp  FdSetFactory.hpp  ISocket.hpp  InfoStruct.hpp  LinuxFdSet.hpp  LinuxSocketSelector.hpp  Server.hpp  Socket.hpp  SocketSelectorFactory.hpp  WindowsFdSet.hpp  WindowsSocket.hpp
include/NetworkLib/: HostHandler.hpp  ISocket.hpp
include/Serializer/: BitSize.hpp  Deserializer.hpp  IDeserializer.hpp  ISerializer.hpp  Serializer.hpp
include/Server/: Game.hpp  RType.hpp  Server.hpp  ServerGameInstance.hpp
include/Time/: Clock.hpp
include/Tools/: Curve.hpp  EntityIterator.hpp  InstanceOf.hpp  Keyboard.hpp  Shortcuts.hpp
latex/: EntityManager_8cpp.tex  EntityManager_8cpp.tex.tmp  EntityManager_8cpp__incl.dot  Entity_8cpp.tex  Entity_8cpp__incl.dot  HitboxComponent_8cpp.tex  HitboxComponent_8cpp__incl.dot  HitboxSystem_8cpp.tex  HitboxSystem_8cpp__incl.dot  PositionComponent_8cpp.tex  PositionComponent_8cpp__incl.dot  RType_8cpp.tex  RType_8cpp__incl.dot  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_b0ccf9fd37b047266b8dc6b1d4d4ce05.tex  dir_b1a122bf62c958266ec5bf64d14fde5a.tex  dir_b1a122bf62c958266ec5bf64d14fde5a_dep.dot  dir_b3425cf3684a72a972685eae55fae74b.tex  dir_b3425cf3684a72a972685eae55fae74b_dep.dot  dir_eba7f6b8b7d3fd8e024a882aba073963.tex  files.tex  main_8cpp.tex  main_8cpp__incl.dot  refman.tex
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  (+93 more)
src/: RType.cpp  main.cpp
src/Client/: Client.cpp  Game.cpp  Menu.cpp  UdpClient.cpp  (+1 more)
src/ECS/: CMakeLists.txt
src/ECS/Components/: AnimationComponent.cpp  BehaviorComponent.cpp  DestroyableComponent.cpp  DrawableComponent.cpp  HitboxComponent.cpp  InputComponent.cpp  MouvementComponent.cpp  MusicComponent.cpp  PositionComponent.cpp  SoundComponent.cpp  StatComponent.cpp  TextComponent.cpp  TimerComponent.cpp  TransformComponent.cpp
src/ECS/Entity/: Entity.cpp  EntityManager.cpp
src/ECS/Systems/: AnimationSystem.cpp  BehaviorSystem.cpp  DestroyableSystem.cpp  DrawableSystem.cpp  HitboxSystem.cpp  MouvementSystem.cpp  MusicSystem.cpp  SerializerSystem.cpp  SoundManager.cpp  SoundSystem.cpp
src/Lib/: Buffer.cpp  CMakeLists.txt  Lib.cpp  Music.cpp  Sound.cpp  SoundManager.cpp  Sprite.cpp  Text.cpp  Timer.cpp  Window.cpp
src/Network/SFMLTest/: CMakeLists.txt  client.cpp  server.cpp
src/SFML/: CMakeLists.txt  SFML.cpp
src/Serializer/: CMakeLists.txt  Deserializer.cpp  Serializer.cpp
src/Time/: CMakeLists.txt  Clock.cpp
tests/: DrawableComponent_t.cpp  Entity.cpp  EntityIterator_t.cpp  EntityManager.cpp  EntityManager_t.cpp  Entity_t.cpp  HitboxComponent.cpp  HitboxComponent_t.cpp  HitboxSystem.cpp  HitboxSystem_t.cpp  Lib_t.cpp  MouvementComponent_t.cpp  MouvementSystem_t.cpp  PositionComponent.cpp  PositionComponent_t.cpp  Sprite_t.cpp  StatComponent_t.cpp  Tools.cpp  Tools_t.cpp  TransformComponent_t.cpp  Window_t.cpp  sample.cpp
(+82 files in other folders)
